--- a/plugins/barcode.css
+++ b/plugins/barcode.css
@@ -31,7 +31,7 @@
 }
 
 .barcode-icon {
-    margin: 0 0 -0.2em 0.3em;
+    margin: 0 0.3em 0 0;
     width: 1.2em;
     height: auto;
     content: url('./barcode-icon.png');  
